# osslag

./: .gitignore  LICENSE  Makefile  README.md  env.template  osslag-analysis-report.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: RELEASING.md
src/osslag/: __init__.py  cli.py  executor.py  pipeline.py  tasks.py
src/osslag/distro/: __init__.py  debian.py  fedora.py
src/osslag/metrics/: malta.py  pvac.py
src/osslag/utils/: github_helper.py  vcs.py
tests/distro/: test_debian.py
tests/metrics/: test_malta.py  test_pvac.py
tests/utils/: test_vcs.py
